Bug 348057 - With konsole5 it is no longer possible to drag a tab from the konsole window to the desktop to create a new konsole window
Summary: With konsole5 it is no longer possible to drag a tab from the konsole window ...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-21 12:49 UTC by Raymond Wooninck
Modified: 2015-08-20 02:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raymond Wooninck 2015-05-21 12:49:24 UTC
With konsole (based on KDE4) it was possible to drag a tab from the tabbar on to the desktop and  the tab would be opened in its own konsole window. With konsole5 this seems no longer possible. It still works by doing a right-click and then selecting "Detach Tab", but no longer when using drag&drop. 



Reproducible: Always
Comment 1 bugs.kde 2015-05-24 15:54:16 UTC
Me too. Also no re-order tabs by dragging
Comment 2 Kurt Hindenburg 2015-08-17 13:16:18 UTC
Git commit a9bac171f77982c6c20a437bc94b43e8ef863a87 by Kurt Hindenburg.
Committed on 17/08/2015 at 13:13.
Pushed by hindenburg into branch 'master'.

Restore movable tabs

Using the mouse, the tabs are movable again.  Also this allow for dnd
outside of current window to create a new window.

Thanks to David Edmundson david davidedmundson co uk for patch.
Related: bug 347094
REVIEW: 124739

M  +1    -3    src/ViewContainer.cpp
M  +27   -0    src/ViewContainerTabBar.cpp
M  +9    -4    src/ViewContainerTabBar.h

http://commits.kde.org/konsole/a9bac171f77982c6c20a437bc94b43e8ef863a87
Comment 3 Kurt Hindenburg 2015-08-20 02:17:40 UTC
Git commit 17b0fb74cb8df7b87d47ded651d686045880387c by Kurt Hindenburg.
Committed on 20/08/2015 at 02:14.
Pushed by hindenburg into branch 'Applications/15.08'.

Restore movable tabs

Using the mouse, the tabs are movable again.  Also this allow for dnd
outside of current window to create a new window.

Thanks to David Edmundson david davidedmundson co uk for patch.
Related: bug 347094
REVIEW: 124739
(cherry picked from commit a9bac171f77982c6c20a437bc94b43e8ef863a87)

M  +1    -3    src/ViewContainer.cpp
M  +27   -0    src/ViewContainerTabBar.cpp
M  +9    -4    src/ViewContainerTabBar.h

http://commits.kde.org/konsole/17b0fb74cb8df7b87d47ded651d686045880387c