Restore movable tabs

Using the mouse, the tabs are movable again.  Also this allow for dnd
outside of current window to create a new window.

Thanks to David Edmundson david davidedmundson co uk for patch.

BUG: 348057
BUG: 347094
REVIEW: 124739